--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "1.6.1",
     "mssql": "^4.0.4",
     "mysql": "^2.15.0",
+    "node-schedule": "^1.2.5",
     "redis": "2.4.2",
     "request": "^2.69.0"
   }
