--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "config": "1.19.0",
     "cookie-parser": "1.4.1",
     "cors": "2.7.1",
+    "csv": "0.4.6",
     "date-utils": "^1.2.21",
     "express": "4.13.4",
     "file-stream-rotator": "0.0.6",
@@ -20,6 +21,7 @@
     "mysql": "^2.15.0",
     "node-schedule": "^1.2.5",
     "redis": "2.4.2",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "utf8": "^2.1.2"
   }
 }
